// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NativeSelect > should allow for addons before and after the input 1`] = `
<div
  class="rmd-text-field-container rmd-text-field-container--outline rmd-text-field-container--hoverable rmd-text-field-container--label rmd-text-field-container--outline-left rmd-text-field-container--outline-right rmd-native-select-container"
  data-testid="container"
>
  <span
    class="rmd-text-field-addon rmd-text-field-addon--before rmd-text-field-addon--presentational rmd-box rmd-box--gap rmd-box--wrap"
  >
    <span
      aria-hidden="true"
      class="rmd-icon rmd-icon--font material-icons"
      data-testid="favorite"
    >
      favorite
    </span>
  </span>
  <select
    class="rmd-native-select rmd-native-select--icon"
    id="select-_r_9_"
  >
    <option
      value="a"
    >
      First
    </option>
  </select>
  <label
    class="rmd-label rmd-label--floating"
    for="select-_r_9_"
  >
    Field
  </label>
  <span
    class="rmd-text-field-addon rmd-text-field-addon--after rmd-text-field-addon--presentational rmd-box rmd-box--gap rmd-box--wrap"
  >
    <span
      aria-hidden="true"
      class="rmd-icon rmd-icon--font material-icons"
      data-testid="close"
    >
      close
    </span>
  </span>
</div>
`;

exports[`NativeSelect > should allow for multiselect behavior 1`] = `
<select
  class="rmd-native-select rmd-native-select--icon"
  id="select-_r_c_"
  multiple=""
  name="choice"
  required=""
>
  <option
    disabled=""
    hidden=""
    value=""
  />
  <option>
    Option 1
  </option>
  <option>
    Option 2
  </option>
  <option>
    Option 3
  </option>
  <option>
    Option 4
  </option>
</select>
`;

exports[`NativeSelect > should allow for multiselect behavior 2`] = `
<select
  class="rmd-native-select rmd-native-select--icon"
  id="select-_r_c_"
  multiple=""
  name="choice"
  required=""
>
  <option
    disabled=""
    hidden=""
    value=""
  />
  <option>
    Option 1
  </option>
  <option>
    Option 2
  </option>
  <option>
    Option 3
  </option>
  <option>
    Option 4
  </option>
</select>
`;

exports[`NativeSelect > should allow the active state to be controlled programmatically instead of with css only by using the active prop 1`] = `
<div
  class="rmd-text-field-container rmd-text-field-container--outline rmd-text-field-container--hoverable rmd-text-field-container--outline-right rmd-native-select-container"
  data-testid="container"
>
  <select
    class="rmd-native-select rmd-native-select--icon"
    id="select-_r_4_"
  >
    <option
      value="a"
    >
      First
    </option>
  </select>
  <span
    class="rmd-text-field-addon rmd-text-field-addon--after rmd-text-field-addon--presentational rmd-box rmd-box--gap rmd-box--wrap"
  >
    <span
      aria-hidden="true"
      class="rmd-icon rmd-icon--font material-icons"
    >
      arrow_drop_down
    </span>
  </span>
</div>
`;

exports[`NativeSelect > should allow the active state to be controlled programmatically instead of with css only by using the active prop 2`] = `
<div
  class="rmd-text-field-container rmd-text-field-container--outline rmd-text-field-container--outline-active rmd-text-field-container--outline-right rmd-native-select-container"
  data-testid="container"
>
  <select
    class="rmd-native-select rmd-native-select--icon"
    id="select-_r_4_"
  >
    <option
      value="a"
    >
      First
    </option>
  </select>
  <span
    class="rmd-text-field-addon rmd-text-field-addon--after rmd-text-field-addon--presentational rmd-box rmd-box--gap rmd-box--wrap"
  >
    <span
      aria-hidden="true"
      class="rmd-icon rmd-icon--font material-icons"
    >
      arrow_drop_down
    </span>
  </span>
</div>
`;

exports[`NativeSelect > should allow the active state to be controlled programmatically instead of with css only by using the active prop 3`] = `
<div
  class="rmd-text-field-container rmd-text-field-container--outline rmd-text-field-container--hoverable rmd-text-field-container--label rmd-text-field-container--outline-right rmd-native-select-container"
  data-testid="container"
>
  <select
    class="rmd-native-select rmd-native-select--icon"
    id="select-_r_4_"
  >
    <option
      value="a"
    >
      First
    </option>
  </select>
  <label
    class="rmd-label rmd-label--floating"
    for="select-_r_4_"
  >
    Label
  </label>
  <span
    class="rmd-text-field-addon rmd-text-field-addon--after rmd-text-field-addon--presentational rmd-box rmd-box--gap rmd-box--wrap"
  >
    <span
      aria-hidden="true"
      class="rmd-icon rmd-icon--font material-icons"
    >
      arrow_drop_down
    </span>
  </span>
</div>
`;

exports[`NativeSelect > should allow the active state to be controlled programmatically instead of with css only by using the active prop 4`] = `
<div
  class="rmd-text-field-container rmd-text-field-container--outline rmd-text-field-container--label rmd-text-field-container--outline-active rmd-text-field-container--outline-right rmd-native-select-container"
  data-testid="container"
>
  <select
    class="rmd-native-select rmd-native-select--icon"
    id="select-_r_4_"
  >
    <option
      value="a"
    >
      First
    </option>
  </select>
  <label
    class="rmd-label rmd-label--active rmd-label--floating rmd-label--floating-active"
    for="select-_r_4_"
  >
    Label
  </label>
  <span
    class="rmd-text-field-addon rmd-text-field-addon--after rmd-text-field-addon--presentational rmd-box rmd-box--gap rmd-box--wrap"
  >
    <span
      aria-hidden="true"
      class="rmd-icon rmd-icon--font material-icons"
    >
      arrow_drop_down
    </span>
  </span>
</div>
`;

exports[`NativeSelect > should allow the label to by styled by labelProps or the labelStyle/labelClassName 1`] = `
<label
  class="rmd-label rmd-label--floating label-props-class-name"
  data-testid="label"
  for="select-_r_a_"
  style="background: orange;"
>
  Label
</label>
`;

exports[`NativeSelect > should allow the label to by styled by labelProps or the labelStyle/labelClassName 2`] = `
<label
  class="rmd-label rmd-label--floating label-class-name"
  data-testid="label"
  for="select-_r_a_"
  style="color: red;"
>
  Label
</label>
`;

exports[`NativeSelect > should apply the correct styles, HTMLAttributes, and allow a ref 1`] = `
<select
  class="rmd-native-select rmd-native-select--icon"
  id="select-_r_0_"
>
  <option
    value="a"
  >
    First
  </option>
</select>
`;

exports[`NativeSelect > should apply the correct styles, HTMLAttributes, and allow a ref 2`] = `
<select
  class="rmd-native-select rmd-native-select--icon"
  id="select-_r_0_"
>
  <option
    value="a"
  >
    First
  </option>
</select>
`;

exports[`NativeSelect > should automatically merge the error and theme props when messageProps have been defined 1`] = `
<div
  class="rmd-form-message-container"
  data-testid="message-container"
>
  <div
    class="rmd-text-field-container rmd-text-field-container--error rmd-text-field-container--filled rmd-text-field-container--hoverable rmd-text-field-container--label rmd-text-field-container--underline rmd-text-field-container--underline-labelled rmd-text-field-container--underline-left rmd-text-field-container--underline-right-addon rmd-error-color rmd-native-select-container"
  >
    <select
      class="rmd-native-select rmd-native-select--icon"
      id="select-_r_7_"
    >
      <option
        value="a"
      >
        First
      </option>
    </select>
    <label
      class="rmd-label rmd-label--error rmd-label--floating rmd-error-color"
      for="select-_r_7_"
    >
      Field
    </label>
    <span
      class="rmd-text-field-addon rmd-text-field-addon--after rmd-text-field-addon--presentational rmd-box rmd-box--gap rmd-box--wrap"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        arrow_drop_down
      </span>
    </span>
  </div>
  <div
    aria-live="polite"
    class="rmd-form-message rmd-form-message--filled rmd-error-color"
    id="form-message-_r_8_"
  >
    <p
      class="rmd-form-message__message"
      id="form-message-_r_8_-message"
    >
      Help Text
    </p>
  </div>
</div>
`;

exports[`NativeSelect > should render the FormMessageContainer when the messageProps have been defined 1`] = `
<div
  class="rmd-form-message-container"
  data-testid="message-container"
>
  <div
    class="rmd-text-field-container rmd-text-field-container--outline rmd-text-field-container--hoverable rmd-text-field-container--label rmd-text-field-container--outline-right rmd-native-select-container"
  >
    <select
      class="rmd-native-select rmd-native-select--icon"
      id="select-_r_5_"
    >
      <option
        value="a"
      >
        First
      </option>
    </select>
    <label
      class="rmd-label rmd-label--floating"
      for="select-_r_5_"
    >
      Field
    </label>
    <span
      class="rmd-text-field-addon rmd-text-field-addon--after rmd-text-field-addon--presentational rmd-box rmd-box--gap rmd-box--wrap"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        arrow_drop_down
      </span>
    </span>
  </div>
  <div
    aria-live="polite"
    class="rmd-form-message rmd-form-message--outline rmd-text-secondary-color"
    id="form-message-_r_6_"
  >
    <p
      class="rmd-form-message__message"
      id="form-message-_r_6_-message"
    >
      Help text
    </p>
  </div>
</div>
`;

exports[`NativeSelect > should render the FormMessageContainer when the messageProps have been defined 2`] = `
<div
  class="rmd-form-message-container rmd-form-message-container--inline"
  data-testid="message-container"
>
  <div
    class="rmd-text-field-container rmd-text-field-container--inline rmd-text-field-container--outline rmd-text-field-container--hoverable rmd-text-field-container--label rmd-text-field-container--outline-right rmd-native-select-container"
  >
    <select
      class="rmd-native-select rmd-native-select--icon"
      id="select-_r_5_"
    >
      <option
        value="a"
      >
        First
      </option>
    </select>
    <label
      class="rmd-label rmd-label--floating"
      for="select-_r_5_"
    >
      Field
    </label>
    <span
      class="rmd-text-field-addon rmd-text-field-addon--after rmd-text-field-addon--presentational rmd-box rmd-box--gap rmd-box--wrap"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        arrow_drop_down
      </span>
    </span>
  </div>
  <div
    aria-live="polite"
    class="rmd-form-message rmd-form-message--outline rmd-text-secondary-color"
    id="form-message-_r_6_"
  >
    <p
      class="rmd-form-message__message"
      id="form-message-_r_6_-message"
    >
      Help text
    </p>
  </div>
</div>
`;

exports[`NativeSelect > should support an error state 1`] = `
<div
  class="rmd-text-field-container rmd-text-field-container--error rmd-text-field-container--outline rmd-text-field-container--hoverable rmd-text-field-container--label rmd-text-field-container--outline-error rmd-text-field-container--outline-right rmd-error-color rmd-native-select-container"
  data-testid="container"
>
  <select
    class="rmd-native-select rmd-native-select--icon"
    id="select-_r_3_"
  >
    <option
      value="a"
    >
      First
    </option>
  </select>
  <label
    class="rmd-label rmd-label--error rmd-label--floating rmd-error-color"
    for="select-_r_3_"
  >
    Label
  </label>
  <span
    class="rmd-text-field-addon rmd-text-field-addon--after rmd-text-field-addon--presentational rmd-box rmd-box--gap rmd-box--wrap"
  >
    <span
      aria-hidden="true"
      class="rmd-icon rmd-icon--font material-icons"
    >
      arrow_drop_down
    </span>
  </span>
</div>
`;

exports[`NativeSelect > should support the disabled state 1`] = `
<div
  class="rmd-text-field-container rmd-text-field-container--outline rmd-text-field-container--disabled rmd-text-field-container--label rmd-text-field-container--outline-right rmd-text-disabled-color rmd-native-select-container"
  data-testid="container"
>
  <select
    class="rmd-native-select rmd-native-select--icon"
    disabled=""
    id="select-_r_2_"
  >
    <option
      value="a"
    >
      First
    </option>
  </select>
  <label
    class="rmd-label rmd-label--disabled rmd-label--floating rmd-text-disabled-color"
    for="select-_r_2_"
  >
    Label
  </label>
  <span
    class="rmd-text-field-addon rmd-text-field-addon--after rmd-text-field-addon--presentational rmd-box rmd-box--gap rmd-box--wrap"
  >
    <span
      aria-hidden="true"
      class="rmd-icon rmd-icon--font material-icons"
    >
      arrow_drop_down
    </span>
  </span>
</div>
`;

exports[`NativeSelect > should support the readOnly state 1`] = `
<div
  class="rmd-text-field-container rmd-text-field-container--outline rmd-text-field-container--disabled rmd-text-field-container--hoverable rmd-text-field-container--outline-right rmd-native-select-container"
  data-testid="container"
>
  <select
    class="rmd-native-select rmd-native-select--icon"
    id="select-_r_1_"
    readonly=""
  >
    <option
      value="a"
    >
      First
    </option>
  </select>
  <span
    class="rmd-text-field-addon rmd-text-field-addon--after rmd-text-field-addon--presentational rmd-box rmd-box--gap rmd-box--wrap"
  >
    <span
      aria-hidden="true"
      class="rmd-icon rmd-icon--font material-icons"
    >
      arrow_drop_down
    </span>
  </span>
</div>
`;
